# tg-bot-MemoDrop

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml  scetch.excalidraw
bot/: config.py  main.py
docs/: architecture.md  phases.md
