[project]
name = "memodrop"
version = "0.1.0"
requires-python = ">=3.12.3"
dependencies = [
    "aiogram==3.28.2",
    "pydantic-settings==2.14.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]